--- a/src/main/java/sensordata/sadd/pages/HomePage.form
+++ b/src/main/java/sensordata/sadd/pages/HomePage.form
@@ -395,7 +395,7 @@
                 <border type="none"/>
                 <children/>
               </grid>
-              <component id="9d68d" class="javax.swing.JLabel" binding="username">
+              <component id="9d68d" class="javax.swing.JLabel" binding="usernameLabel">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
                   <gridbag weightx="1.0" weighty="0.0"/>
