--- a/src/main/java/sensordata/sadd/ResetPage.form
+++ b/src/main/java/sensordata/sadd/ResetPage.form
@@ -72,6 +72,14 @@
               <text value="verifieer"/>
             </properties>
           </component>
+          <component id="2a251" class="javax.swing.JLabel" binding="warning">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value=" "/>
+            </properties>
+          </component>
         </children>
       </grid>
       <hspacer id="1e451">
