--- a/src/main/java/sensordata/sadd/LoginPage.form
+++ b/src/main/java/sensordata/sadd/LoginPage.form
@@ -10,10 +10,10 @@
     <children>
       <component id="db28d" class="javax.swing.JLabel" binding="usernameLabel">
         <constraints>
-          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="gebruikersnaam:"/>
+          <text value="email"/>
         </properties>
       </component>
       <hspacer id="1869f">
